tests/NormalTests/paczka1/fuzzy1/30625568.err
Error in line 7: tE2 S41 55,5
Error in line 12: JhAXzXva9iE S41 47,4
Error in line 9: tE2 A998 25,5
Error in line 24: UfE A99U 29,4
Error in line 25: Wpk4IyI A889 2,9
